Upgrade to JavaFX 25